### Set Up `pyproject.toml`

**File: `pyproject.toml`**

Configure project with `pyproject.toml` to make it installable with pip.

```toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
packages = ["graphs_ephrones"]